ipc/ipdl/test/ipdl/ok/PLazySend.ipdl
[ChildProc=any]
protocol PLazySend {
child:
    [LazySend] async foo();
parent:
    [LazySend] async bar() returns (bool baz);
};
