ipc/ipdl/test/ipdl/error/ReturnFromDestructor.ipdl
//error: destructors cannot return values

[ChildProc=any]
protocol ReturnFromDestructor {
child:
    async __delete__() returns (bool something);
};
